--- a/assets/css/publico/home/home.css
+++ b/assets/css/publico/home/home.css
@@ -1,4 +1,4 @@
-@import url("css/shared/cores.css");
-@import url("css/shared/footer.css");
-@import url("css/shared/header.css");
-@import url("css/shared/pages.css");
+@import url("../../shared/cores.css");
+@import url("../../shared/footer.css");
+@import url("../../shared/header.css");
+@import url("../../shared/pages.css");
