--- a/assets/css/shared/pages.css
+++ b/assets/css/shared/pages.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+.content-container {
+    position: relative;
+    min-height: 100vh;
+}
+
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
